--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -4,6 +4,8 @@
 
 .page-body {
   font-family: 'Arial', sans-serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 14px;
   line-height: 18px;
   min-height: 100%;
