--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,9 +1,15 @@
 .button {
+  display: inline-block;
+  min-width: 280px;
+  box-sizing: border-box;
+  padding: 7px 44px;
+  margin: 0 auto;
   background-color: $basic-green;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
   line-height: 18px;
+  text-align: center;
   text-transform: uppercase;
 }
