--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -4,10 +4,18 @@
 
 .effect__list {
   list-style: none;
+  padding: 0;
+}
+
+.effect__item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .effect__item {
   background-color: $basic-grey;
+  padding: 21px 33px 18px 20px;
+  min-height: 266px;
+  box-sizing: border-box;
 }
 
 .effect__item-title {
