--- a/source/sass/blocks/functional-food.scss
+++ b/source/sass/blocks/functional-food.scss
@@ -1,6 +1,9 @@
 .functional-food {
-  width: 320px;
-  background: url("../img/background/foot-header-cat.jpg") $basic-green;
+  background:
+    url("../../img/background/fon-cat.svg") no-repeat,
+    url("../../img/background/foot-header-cat.jpg") no-repeat;
+  text-align: center;
+  padding-top: 27px;
 }
 
 .functional-food__title {
