--- a/source/sass/blocks/product-descriptions.scss
+++ b/source/sass/blocks/product-descriptions.scss
@@ -3,5 +3,10 @@
 }
 
 .product-descriptions__list {
+  padding: 0;
   list-style: none;
+}
+
+.product-descriptions__item:not(:last-child) {
+  margin-bottom: 20px;
 }
