--- a/source/sass/blocks/functional-food.scss
+++ b/source/sass/blocks/functional-food.scss
@@ -13,6 +13,7 @@
   font-style: normal;
   font-size: 36px;
   line-height: 36px;
+  color: $basic-white;
 }
 
 .functional-food__slogan {
@@ -22,5 +23,6 @@
   font-style: normal;
   font-size: 14px;
   line-height: 14px;
+  color: $basic-white;
   text-transform: uppercase;
 }
