--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -4,12 +4,18 @@
 
 .main-nav__list {
   list-style: none;
+  padding: 0;
+}
+
+.main-nav__item {
+  display: block;
 }
 
 .main-nav__link {
   display: inline-block;
   box-sizing: border-box;
   padding: 22px 70px 24px 69px;
+  min-width: 320px;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 500;
   font-style: normal;
