--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,6 @@
 @import "blocks/page-footer.scss";
 @import "blocks/product-descriptions.scss";
 @import "blocks/social.scss";
+@import "blocks/page-main.scss";
+@import "blocks/form.scss";
+@import "blocks/fields-list.scss";
