--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,3 +1,5 @@
+$basic-white: #fff;
+$basic-black: #000;
 $basic-green:rgba(104, 183, 56, 0.85);
 $basic-grey: #f2f2f2;
 $special-dark-grey: #444444;
