--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,3 +3,32 @@
   padding: 0;
   margin: 0;
 }
+
+.form__label {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: $special-dark-grey;
+  margin: 13px 13px 0 0;
+}
+
+.form__input {
+  flex-grow: 1;
+  height: 46px;
+  padding: 0 14px;
+  border: 1px solid $light-grey;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 18px;
+  color: $special-dark-grey;
+  text-transform: uppercase;
+}
+
+.form__fieldset--separator {
+  border-bottom: 1px solid $dark-grey;
+}
