--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,6 +2,7 @@ $basic-white: #ffffff;
 $basic-black: #000000;
 $basic-green:rgba(104, 183, 56, 0.85);
 $basic-grey: #f2f2f2;
+$light-grey: #e7e7e7;
 $special-dark-grey: #444444;
 $dark-grey: #d9d9d9;
 $height-mobile: 320px;
