--- a/source/sass/blocks/functional-food.scss
+++ b/source/sass/blocks/functional-food.scss
@@ -1,7 +1,7 @@
 .functional-food {
   background:
-    url("../../img/background/fon-cat.svg") no-repeat,
-    url("../../img/background/foot-header-cat.jpg") no-repeat;
+    url("../img/background/fon-cat.svg") no-repeat,
+    url("../img/background/foot-header-cat.jpg") no-repeat;
   text-align: center;
   padding-top: 27px;
 }
