--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -10,10 +10,12 @@
   font-style: normal;
   font-size: 16px;
   line-height: 18px;
+  color: $special-black;
   text-transform: uppercase;
 }
 
 .our-address__contact {
+  font-style: normal;
   font-size: 14px;
   line-height: 20px;
 }
