--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -15,7 +15,6 @@
   background-color: $basic-grey;
   padding: 21px 33px 18px 20px;
   min-height: 266px;
-  box-sizing: border-box;
 }
 
 .effect__item-title {
@@ -24,6 +23,7 @@
   font-style: normal;
   font-size: 24px;
   line-height: 37px;
+  color: $basic-black;
   text-transform: uppercase;
 }
 
@@ -33,5 +33,6 @@
   font-style: normal;
   font-size: 16px;
   line-height: 16px;
+  color: $basic-black;
   text-transform: uppercase;
 }
