--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -4,7 +4,6 @@
 }
 
 .example__list {
-
   list-style: none;
 }
 
@@ -14,6 +13,7 @@
   font-style: normal;
   font-size: 24px;
   line-height: 24px;
+  color: $basic-black;
   text-transform: uppercase;
 }
 
@@ -28,6 +28,7 @@
   font-style: normal;
   font-size: 14px;
   line-height: 20px;
+  color: $basic-black;
   text-transform: uppercase;
 }
 
@@ -37,5 +38,6 @@
   font-style: normal;
   font-size: 16px;
   line-height: 20px;
+  color: $basic-black;
   text-transform: uppercase;
 }
