--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,6 @@
 $basic-white: #ffffff;
 $basic-black: #000000;
+$special-black: #111111;
 $basic-green:rgba(104, 183, 56, 0.85);
 $basic-grey: #f2f2f2;
 $light-grey: #e7e7e7;
