--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -5,6 +5,7 @@
   font-size: 36px;
   line-height: 36px;
   color: $basic_black;
+  margin: 0 0 37px 20px;
 }
 
 .page-main__text {
@@ -15,5 +16,5 @@
   line-height: 18px;
   text-transform: uppercase;
   color: $basic_black;
-  margin-bottom: 39px;
+  margin: 0 20px 39px 20px;
 }
