--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,5 @@
 @import "blocks/page-main.scss";
 @import "blocks/form.scss";
 @import "blocks/fields-list.scss";
+@import "blocks/radio.scss";
+@import "blocks/checkbox.scss";
