--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,5 +5,7 @@ $basic-green:rgba(104, 183, 56, 0.85);
 $basic-grey: #f2f2f2;
 $light-grey: #e7e7e7;
 $special-dark-grey: #444444;
+$special-light-black: #222222;
 $dark-grey: #d9d9d9;
+$special-light-grey: #cdcdcd;
 $height-mobile: 320px;
