--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,7 +1,11 @@
+.form {
+  margin: 0 20px;
+}
+
 .form__fieldset {
   border: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 22px 0;
 }
 
 .form__label {
@@ -31,4 +35,36 @@
 
 .form__fieldset--separator {
   border-bottom: 1px solid $dark-grey;
+}
+
+.form__legend {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 26px;
+  color: $basic-black;
+  margin-bottom: 35px;
+}
+
+.form__textarea {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 18px;
+  color: $special-dark-grey;
+  text-transform: uppercase;
+  width: 100%;
+  height: 150px;
+  padding: 9px 12px 9px 14px;
+  border: 1px solid $light-grey;
+  resize: none;
+}
+
+.form__legend-text {
+  margin: 21px 0 0 0;
+  text-align: center;
+  line-height: 16px;
+  color: $basic-black;
 }
