--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -9,7 +9,7 @@
   font-size: 14px;
   line-height: 18px;
   color: $special-dark-grey;
-  width: 320px;
+  width: $height-mobile;
   min-height: 100%;
   margin: 0;
   padding: 0;
