--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,6 @@
 @import "blocks/fields-list.scss";
 @import "blocks/radio.scss";
 @import "blocks/checkbox.scss";
+@import "blocks/products.scss";
+@import "blocks/energy-food.scss";
+@import "blocks/additional-products.scss"
