--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -27,6 +27,18 @@ body {
   color: $basic-black;
 }
 
+.subtitle {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.container {
+  margin: 0 20px;
+}
+
 img {
   max-width: 100%;
 }
