--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,8 @@ $special-black: #111111;
 $basic-green:rgba(104, 183, 56, 0.85);
 $basic-grey: #f2f2f2;
 $light-grey: #e7e7e7;
+$special-light-grey: #e6e6e6;
+$special-light-grey2: #ebebeb;
 $special-dark-grey: #444444;
 $special-light-black: #222222;
 $dark-grey: #d9d9d9;
