--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -16,13 +16,13 @@
   line-height: 18px;
   text-transform: uppercase;
   color: $special-dark-grey;
-  margin: 13px 13px 0 0;
+  padding-right: 13px;
 }
 
 .form__input {
   flex-grow: 1;
+  padding: 14px 14px;
   height: 46px;
-  padding: 0 14px;
   border: 1px solid $light-grey;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
@@ -31,6 +31,11 @@
   line-height: 18px;
   color: $special-dark-grey;
   text-transform: uppercase;
+}
+
+.form__input::placeholder {
+  color: $special-dark-grey;
+  opacity: 1;
 }
 
 .form__fieldset--separator {
@@ -60,6 +65,11 @@
   padding: 9px 12px 9px 14px;
   border: 1px solid $light-grey;
   resize: none;
+}
+
+.form__textarea::placeholder {
+  color: $special-dark-grey;
+  opacity: 1;
 }
 
 .form__legend-text {
