--- a/source/sass/blocks/energy-food.scss
+++ b/source/sass/blocks/energy-food.scss
@@ -1,7 +1,11 @@
+.energy-food__more-products {
+  margin-bottom: 25px;
+  text-align: center;
+}
+
 .energy-food__link {
   background-color: $basic-grey;
   color: $special-dark-grey;
-  margin-bottom: 25px;
 }
 
 .energy-food__title {
