--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,5 +22,6 @@
 @import "blocks/radio.scss";
 @import "blocks/checkbox.scss";
 @import "blocks/products.scss";
+@import "blocks/product.scss";
 @import "blocks/energy-food.scss";
-@import "blocks/additional-products.scss"
+@import "blocks/additional-products.scss";
