--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,15 +1,20 @@
-.main-nav {
-  width: 320px;
-}
-
 .main-nav__list {
   list-style: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: end;
+  }
 }
 
 .main-nav__item {
   display: block;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 38px;
+  }
 }
 
 .main-nav__link {
@@ -25,4 +30,23 @@
   text-align: center;
   color: $basic-black;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+    min-width: 0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    padding: 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav__item--active {
+    border-bottom: 2px solid $special-green;
+  }
 }
