--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,6 +2,7 @@ $basic-white: #ffffff;
 $basic-black: #000000;
 $special-black: #111111;
 $basic-green:rgba(104, 183, 56, 0.85);
+$special-green:rgba(104, 183, 56, 1);
 $basic-grey: #f2f2f2;
 $light-grey: #e7e7e7;
 $special-light-grey: #e6e6e6;
@@ -11,3 +12,4 @@ $special-light-black: #222222;
 $dark-grey: #d9d9d9;
 $special-light-grey3: #cdcdcd;
 $height-mobile: 320px;
+$tablet-width: 768px;
