--- a/source/sass/blocks/product-descriptions.scss
+++ b/source/sass/blocks/product-descriptions.scss
@@ -10,11 +10,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-right: 79px;
   }
 }
 
 .product-descriptions__item {
   margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    width: 247px;
+    margin-bottom: 37px;
+  }
 }
 
 .product-descriptions__item--quickness {
@@ -25,5 +31,11 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
+  }
+}
+
+.product-descriptions__text {
+  @media (min-width: $tablet-width) {
+    width: 245px;
   }
 }
