--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -19,4 +19,9 @@
     font-size: 16px;
     line-height: 24px;
   }
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
