--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -1,20 +1,50 @@
 .effect {
   margin: 0 20px 27px 20px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 768px;
+    margin: 0 auto;
+    padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+    margin: 0 auto;
+    padding: 0 110px;
+  }
 }
 
 .effect__list {
   list-style: none;
   padding: 0;
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .effect__item:not(:last-child) {
   margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .effect__item {
   background-color: $basic-grey;
   padding: 21px 33px 18px 20px;
   min-height: 266px;
+
+  @media (min-width: $tablet-width) {
+    padding: 77px 28px 53px 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 570px;
+    padding: 41px 28px 51px 52px;
+  }
 }
 
 .effect__item-title {
