--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,10 +1,84 @@
 .example {
+  @media (min-width: $desktop-width) {
+    background: linear-gradient(0deg, #f2f2f2 60%, transparent 40%);
+  }
+}
+
+.example__wrapper {
   padding: 27px 20px 25px 20px;
   background: $basic-grey;
+
+  @media (min-width: $tablet-width) {
+    background: $basic-white;
+    width: 768px;
+    margin: 0 auto;
+    padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 110px;
+    margin: 0 auto;
+    width: 1440px;
+    background: none;
+  }
+}
+
+.example__title {
+  @media (min-width: $desktop-width) {
+    grid-row: 1/2;
+    grid-column: 1/-1;
+  }
+}
+
+.example__choice-wrapper {
+  @media (min-width: $tablet-width) {
+    background: $basic-grey;
+    text-align: center;
+  }
 }
 
 .example__list {
   list-style: none;
+  padding: 0;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+.example__item {
+  text-align: center;
+  border: 1px solid $special-light-grey3;
+  border-radius: 3px;
+
+  @media (min-width: $tablet-width) {
+    padding: 15px 0 0 0;
+    min-width: 162px;
+    height: 72px;
+    margin-right: 42px;
+  }
+}
+
+.example__parameters-wrapper {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-direction: column;
+    background: $basic-grey;
+  }
+}
+
+.example__text {
+  @media (min-width: $tablet-width) {
+    grid-row: 1/2;
+    grid-column: 1/-1;
+  }
 }
 
 .example__item-text {
@@ -15,11 +89,30 @@
   line-height: 24px;
   color: $basic-black;
   text-transform: uppercase;
+  margin: 0 0 5px 0;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .example__desc {
+  display: inline-block;
   font-size: 12px;
   line-height: 12px;
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    background: $basic-white;
+    font-size: 14px;
+    line-height: 14px;
+    padding: 0 9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background: $basic-grey;
+  }
 }
 
 .example__result {
@@ -30,6 +123,19 @@
   line-height: 20px;
   color: $basic-black;
   text-transform: uppercase;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+  }
 }
 
 .example__restriction {
