--- a/source/sass/blocks/functional-food.scss
+++ b/source/sass/blocks/functional-food.scss
@@ -1,17 +1,28 @@
 .functional-food {
   background:
     url("../img/background/fon-cat.svg") no-repeat top center,
-    url("../img/background/foot-header-cat.jpg") no-repeat top center;
+    $basic-green;
   text-align: center;
   padding-top: 27px;
+  height: 302px;
+  margin-bottom: 140px;
 
   @media (min-width: $tablet-width) {
-    background: url("../img/background/logo-product.jpg") no-repeat;
-    background-position: bottom;
+    background: url("../img/logo/logo-product-desktop.png") no-repeat;
+    background-position: 120px 200px;
     text-align: left;
-    margin: 0 30px;
-    min-height: 812px;
-    padding: 0;
+    padding: 0 30px;
+    margin: 0 auto;
+    min-height: 700px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-position: 500px 0;
+    background-size: 552px 499px;
+    margin: 0 auto;
+    padding: 0 110px;
+    min-height: 550px;
+    width: 1440px;
   }
 }
 
@@ -27,9 +38,15 @@
 
   @media (min-width: $tablet-width) {
     color: $basic-black;
+    width: 414px;
     margin: 0 50px 41px 87px;
     font-size: 60px;
     line-height: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 414px;
+    margin-left: 80px;
   }
 }
 
@@ -49,6 +66,10 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 80px;
+  }
 }
 
 .functional-food__link {
@@ -57,9 +78,19 @@
 
   @media (min-width: $tablet-width) {
     margin: 0 0 0 87px;
-    padding: 14px 26px;
+    padding: 17px 26px 17px 27px;
     font-size: 20px;
     line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 80px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__wrapper-food {
+    min-height: 556px;
   }
 }
 
