--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -39,6 +39,12 @@
     line-height: 24px;
     padding: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    color: $basic-white;
+    font-size: 20px;
+    line-height: 29px;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -48,5 +54,11 @@
 
   .main-nav__item--active {
     border-bottom: 2px solid $special-green;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav__item--active {
+    border-bottom: 2px solid $basic-white;
   }
 }
