--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -1,8 +1,30 @@
+.our-address__address-wrapper {
+  @media (min-width: $tablet-width) {
+    width: 768px;
+    margin: 0 auto;
+    padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+    min-height: 201px;
+    margin: 0 auto;
+    padding: 0 110px;
+  }
+}
+
 .our-address__address {
   display: flex;
   justify-content: space-between;
   padding: 28px 20px;
+
+  @media (min-width: $desktop-width) {
+    width: 570px;
+    min-height: 201px;
+    background-color: $basic-white;
+  }
 }
+
 
 .our-address__invitation {
   font-family: "Oswald", "Arial", sans-serif;
@@ -12,14 +34,43 @@
   line-height: 18px;
   color: $special-black;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 21px;
+  }
 }
 
 .our-address__contact {
   font-style: normal;
   font-size: 14px;
   line-height: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
-.our-address__map {
-  width: 100%;
+.our-address__image {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
+
+.our-address__wrapper {
+  @media (min-width: $tablet-width) {
+    background: url("../img/background/background-tablet.png") no-repeat bottom;
+    min-height: 601px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background: url("../img/background/background-desktop.png") no-repeat bottom;
+    min-height: 400px;
+    padding: 95px 110px;
+  }
 }
