--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -25,6 +25,11 @@ body {
   font-size: 36px;
   line-height: 40px;
   color: $basic-black;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .subtitle {
