--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -71,6 +71,6 @@
   @media (min-width: $desktop-width) {
     background: url("../img/background/background-desktop.png") no-repeat bottom;
     min-height: 400px;
-    padding: 95px 110px;
+    padding: 95px 0;
   }
 }
