--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -6,6 +6,21 @@
   line-height: 36px;
   color: $basic_black;
   margin: 0 0 37px 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    max-width: 768px;
+    padding: 0 70px;
+    margin: 0 auto;
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1440px;
+    padding: 0 110px;
+    margin: 0 auto 56px auto;
+  }
 }
 
 .page-main__text {
@@ -17,4 +32,19 @@
   text-transform: uppercase;
   color: $basic_black;
   margin: 0 20px 39px 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    max-width: 768px;
+    padding: 0 70px;
+    margin: 0 auto;
+    margin-bottom: 66px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1440px;
+    padding: 0 110px;
+    margin: 0 auto 66px auto;
+  }
 }
