--- a/source/sass/blocks/fields-list.scss
+++ b/source/sass/blocks/fields-list.scss
@@ -2,6 +2,16 @@
   list-style: none;
   padding: 0;
   margin: 0 20px 20px 20px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 70px 0 70px;
+  }
+}
+
+.fields-list--radio {
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
 }
 
 .fields-list__item {
