--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -40,6 +40,18 @@
 
 .form__fieldset--separator {
   border-bottom: 1px solid $dark-grey;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
+}
+
+.form__fieldset--border {
+  @media (min-width: $tablet-width) {
+    border: 1px solid $light-grey;
+    margin: 0 70px 71px 70px;
+    padding: 25px 30px;
+  }
 }
 
 .form__legend {
@@ -52,6 +64,16 @@
   padding: 0 20px;
   margin-right: 20px;
   margin-bottom: 35px;
+}
+
+.form__button-wrapper {
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 136px 0 70px;
+  }
 }
 
 .form__textarea {
@@ -68,6 +90,11 @@
   margin: 0 20px;
   border: 1px solid $light-grey;
   resize: none;
+
+  @media (min-width: $tablet-width) {
+    width: calc(100% - 140px);
+    margin: 0 70px;
+  }
 }
 
 .form__textarea::placeholder {
@@ -77,7 +104,10 @@
 
 .form__legend-text {
   margin: 21px 0 0 0;
-  text-align: center;
   line-height: 16px;
   color: $basic-black;
+
+  @media (min-width: $tablet-width) {
+    min-width: 221px;
+  }
 }
