--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,41 +1,31 @@
 .example {
-  @media (min-width: $desktop-width) {
-    background: linear-gradient(0deg, #f2f2f2 60%, transparent 40%);
+  background: $basic-grey;
+
+  @media (min-width: $tablet-width) {
+    background: none;
   }
 }
 
 .example__wrapper {
-  padding: 27px 20px 25px 20px;
-  background: $basic-grey;
+  padding: 0;
 
   @media (min-width: $tablet-width) {
     background: $basic-white;
-    width: 768px;
-    margin: 0 auto;
-    padding: 0 30px;
+    padding: 0;
   }
 
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 110px;
-    margin: 0 auto;
-    width: 1440px;
     background: none;
   }
 }
 
-.example__title {
-  @media (min-width: $desktop-width) {
-    grid-row: 1/2;
-    grid-column: 1/-1;
-  }
-}
-
 .example__choice-wrapper {
+  text-align: center;
+
   @media (min-width: $tablet-width) {
     background: $basic-grey;
-    text-align: center;
   }
 }
 
@@ -146,4 +136,10 @@
   line-height: 20px;
   color: $basic-black;
   text-transform: uppercase;
+}
+
+.example__wrapper-container {
+  @media (min-width: $desktop-width) {
+    background: $basic-grey;
+  }
 }
