--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -1,10 +1,4 @@
 .our-address__address-wrapper {
-  @media (min-width: $tablet-width) {
-    width: 768px;
-    margin: 0 auto;
-    padding: 0 30px;
-  }
-
   @media (min-width: $desktop-width) {
     width: 1440px;
     min-height: 201px;
@@ -16,7 +10,7 @@
 .our-address__address {
   display: flex;
   justify-content: space-between;
-  padding: 28px 20px;
+  padding: 28px 0;
 
   @media (min-width: $desktop-width) {
     width: 570px;
@@ -73,4 +67,8 @@
     min-height: 400px;
     padding: 95px 0;
   }
+}
+
+.our-address__map {
+  padding: 0;
 }
