--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -3,25 +3,21 @@
 }
 
 .page-footer__wrapper {
-  padding: 39px 20px 22px 20px;
+  padding-top: 39px;
+  padding-bottom: 22px;
 
   @media (min-width: $tablet-width) {
     display: flex;
-    padding: 0 30px;
     justify-content: space-between;
-  }
-
-  @media (min-width: $desktop-width) {
-    max-width: 1440px;
-    padding: 0 110px;
-    margin: 0 auto;
   }
 }
 
 .page-footer__logo {
-  margin: 0 auto 32px auto;
+  margin-bottom: 32px;
+  text-align: center;
 
   @media (min-width: $tablet-width) {
     margin: 0;
+    text-align: start;
   }
 }
