--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -32,6 +32,22 @@ body {
   }
 }
 
+.container {
+  max-width: 320px;
+  padding: 0 20px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    max-width: $tablet-width;
+    padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: $desktop-width;
+    padding: 0 110px;
+  }
+}
+
 .subtitle {
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
