--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -1,7 +1,3 @@
-.effect {
-  margin-top: 27px;
-}
-
 .effect__list {
   list-style: none;
   padding: 0;
@@ -18,6 +14,10 @@
   @media (min-width: $tablet-width) {
     margin-bottom: 30px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
 }
 
 .effect__item {
@@ -30,8 +30,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 570px;
-    padding: 41px 28px 51px 52px;
+    width: calc(100% / 2 - 40px);
+    padding: 41px 52px 51px 52px;
   }
 }
 
