--- a/source/sass/blocks/functional-food.scss
+++ b/source/sass/blocks/functional-food.scss
@@ -4,19 +4,20 @@
   margin-bottom: 140px;
 
   @media (min-width: $tablet-width) {
-    background: url("../img/logo/logo-product-desktop.png") no-repeat;
-    background-position: 120px 200px;
+    position: relative;
     text-align: left;
-    min-height: 700px;
+    min-height: 809px;
+    padding-left: 87px;
+    margin-bottom: 10px;
   }
 
   @media (min-width: $desktop-width) {
     background-position: 500px 0;
     background-size: 552px 499px;
-    margin: 0 auto;
-    padding: 0 110px;
+    padding-top: 111px;
+    padding-left: 80px;
     min-height: 550px;
-    width: 1440px;
+    vertical-align: middle;
   }
 }
 
@@ -33,14 +34,13 @@
   @media (min-width: $tablet-width) {
     color: $basic-black;
     width: 414px;
-    margin: 0 50px 41px 87px;
+    margin: 0 50px 41px 0;
     font-size: 60px;
     line-height: 60px;
   }
 
   @media (min-width: $desktop-width) {
     width: 414px;
-    margin-left: 80px;
   }
 }
 
@@ -56,13 +56,31 @@
 
   @media (min-width: $tablet-width) {
     color: $basic-black;
-    margin: 0 0 41px 87px;
+    margin-bottom: 41px;
     font-size: 20px;
     line-height: 20px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 80px;
+    margin-bottom: 52px;
+  }
+}
+
+.functional-food__logo {
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 200px;
+    left: 30px;
+    width: 709px;
+    height: 609px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 1px;
+    left: 405px;
+    width: 709px;
+    height: 609px;
   }
 }
 
@@ -70,20 +88,12 @@
   font-size: 14px;
   line-height: 18px;
 
+
   @media (min-width: $tablet-width) {
-    margin: 0 0 0 87px;
+    position: relative;
     padding: 17px 26px 17px 27px;
     font-size: 20px;
     line-height: 20px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-left: 80px;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .functional-food__logo {
-    display: none;
+    z-index: 1;
   }
 }
