--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,13 @@
+.page-header {
+  @media (min-width: $tablet-width) {
+    padding-top: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 53px;
+  }
+}
+
 .page-header__logo {
   display: inline-block;
   padding: 12px 0 16px 0;
@@ -8,18 +18,14 @@
 }
 
 .page-header__wrapper {
-  padding: 0;
-
   @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
-    margin: 42px auto 42px auto;
-    padding: 0 30px;
+    margin: 0 auto 42px auto;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 110px;
-    margin: 69px auto 32px auto;
+    margin: 0 auto 32px auto;
   }
 }
 
