--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,7 @@ $basic-green:rgba(104, 183, 56, 0.85);
 $special-green:rgba(104, 183, 56, 1);
 $basic-grey: #f2f2f2;
 $light-grey: #e7e7e7;
+$basic-grey2: #eaeaea;
 $special-light-grey: #e6e6e6;
 $special-light-grey2: #ebebeb;
 $special-dark-grey: rgba(68, 68, 68, 1);
