--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -4,37 +4,37 @@
   @media (min-width: $tablet-width) {
     background: none;
   }
-}
-
-.example__wrapper {
-  padding: 0;
-
-  @media (min-width: $tablet-width) {
-    background: $basic-white;
-    padding: 0;
-  }
 
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background: none;
   }
 }
 
 .example__choice-wrapper {
   text-align: center;
+  padding-bottom: 29px;
 
   @media (min-width: $tablet-width) {
-    background: $basic-grey;
+    padding-bottom: 44px;
+    background: linear-gradient(0deg, $basic-grey2 70%, transparent 30%);
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1/3;
+    grid-column: 2/3;
   }
 }
 
 .example__list {
   list-style: none;
   padding: 0;
+  margin: 0 0 25px 0;
+  display: flex;
+  justify-content: space-between;
 
   @media (min-width: $tablet-width) {
-    display: flex;
+    justify-content: flex-start;
   }
 }
 
@@ -42,12 +42,15 @@
   text-align: center;
   border: 1px solid $special-light-grey3;
   border-radius: 3px;
+  padding-top: 14px;
+  min-width: 124px;
+  height: 58px;
 
   @media (min-width: $tablet-width) {
     padding: 15px 0 0 0;
     min-width: 162px;
     height: 72px;
-    margin-right: 42px;
+    margin: 0 42px 0 0;
   }
 }
 
@@ -55,17 +58,22 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-bottom: 59px;
   }
 
   @media (min-width: $desktop-width) {
-    display: flex;
-    flex-direction: column;
-    background: $basic-grey;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    min-height: 462px;
+    margin: 0;
   }
 }
 
 .example__text {
+  margin: 0 0 25px 0;
+
   @media (min-width: $tablet-width) {
+    margin-bottom: 54px;
     grid-row: 1/2;
     grid-column: 1/-1;
   }
@@ -79,11 +87,12 @@
   line-height: 24px;
   color: $basic-black;
   text-transform: uppercase;
-  margin: 0 0 5px 0;
+  margin: 0 0 12px 0;
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
     line-height: 37px;
+    margin: 0 0 5px 0;
   }
 }
 
@@ -92,9 +101,13 @@
   font-size: 12px;
   line-height: 12px;
   margin: 0;
+  max-width: 86px;
+  padding: 0 15px;
+  background: $basic-grey;
 
   @media (min-width: $tablet-width) {
     background: $basic-white;
+    max-width: none;
     font-size: 14px;
     line-height: 14px;
     padding: 0 9px;
@@ -144,6 +157,14 @@
   }
 }
 
+.example__title {
+  @media (min-width: $desktop-width) {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    padding-top: 76px;
+  }
+}
+
 .example__title h2 {
   margin: 0 0 33px 0;
 
@@ -154,4 +175,22 @@
   @media (min-width: $desktop-width) {
     margin: 0 0 76px 0;
   }
+}
+
+.example__cat-fat {
+  @media (min-width: $tablet-width) {
+    width: 677px;
+    height: 536px;
+  }
+}
+
+.example__cat-skinny {
+  @media (min-width: $tablet-width) {
+    width: 545px;
+    height: 520px;
+  }
+}
+
+.cat-hidden {
+  display: none;
 }
