--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -2,9 +2,16 @@
   background: $basic-grey;
 
   @media (min-width: $tablet-width) {
-    background: none;
+    background: linear-gradient(180deg, transparent 57%, $basic-grey2 43%);
   }
 
+  @media (min-width: $desktop-width) {
+    background: linear-gradient(0deg, transparent 70%, $basic-white 30%),
+      linear-gradient(270deg, $basic-grey2 50%, $basic-grey 50%);
+  }
+}
+
+.example__wrapper {
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -23,6 +30,8 @@
   @media (min-width: $desktop-width) {
     grid-row: 1/3;
     grid-column: 2/3;
+    background: linear-gradient(0deg, transparent 70%, $basic-white 30%),
+      linear-gradient(270deg, $basic-grey2 50%, $basic-grey 50%);
   }
 }
 
@@ -62,6 +71,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    display: block;
     grid-row: 2/3;
     grid-column: 1/2;
     min-height: 462px;
