--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -10,7 +10,7 @@
 }
 
 .main-nav__item {
-  border-bottom: 1px solid $special-light-grey;
+  outline: 1px solid $special-light-grey;
   text-align: center;
 
   @media (min-width: $tablet-width) {
@@ -21,7 +21,7 @@
 
 .main-nav__link {
   display: inline-block;
-  padding: 22px 24px;
+  padding: 23px 24px 23px 24px;
   min-width: 280px;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 500;
