--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,6 @@
 .page-header {
+  margin-bottom: 170px;
+
   @media (min-width: $tablet-width) {
     padding-top: 24px;
   }
@@ -10,7 +12,7 @@
 
 .page-header__logo {
   display: inline-block;
-  padding: 12px 0 16px 0;
+  padding: 12px 0 12px 0;
 
   @media (min-width: $tablet-width) {
     padding: 0;
