--- a/source/sass/blocks/functional-food.scss
+++ b/source/sass/blocks/functional-food.scss
@@ -1,6 +1,6 @@
 .functional-food {
   text-align: center;
-  height: 302px;
+  height: min-content;
   padding-top: 28px;
 
   @media (min-width: $tablet-width) {
