--- a/source/sass/blocks/fields-list.scss
+++ b/source/sass/blocks/fields-list.scss
@@ -1,21 +1,48 @@
 .fields-list {
   list-style: none;
-  padding: 0;
-  margin: 0 20px 20px 20px;
-
-  @media (min-width: $tablet-width) {
-    margin: 0 70px 0 70px;
-  }
 }
 
-.fields-list--radio {
+.fields-list--reset {
   @media (min-width: $tablet-width) {
+    padding: 0;
     margin: 0;
   }
 }
 
 .fields-list__item {
   display: flex;
-  margin-bottom: 13px;
+  margin-bottom: 12px;
   align-items: baseline;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
+}
+
+.fields-list--checkbox {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+}
+
+.fields-list--contacts {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+}
+
+.fields-list__item--contacts {
+  @media (min-width: $desktop-width) {
+    @include col-2-2(80px);
+  }
 }
