--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -17,12 +17,16 @@
   text-transform: uppercase;
   color: $special-dark-grey;
   padding-right: 13px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 29px;
+  }
 }
 
 .form__input {
   flex-grow: 1;
   padding: 13px 14px;
-  height: 46px;
   border: 1px solid $light-grey;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
@@ -31,6 +35,12 @@
   line-height: 18px;
   color: $special-dark-grey;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding: 11px 18px;
+    font-size: 20px;
+    line-height: 29px;
+  }
 }
 
 .form__input::placeholder {
@@ -44,13 +54,21 @@
   @media (min-width: $tablet-width) {
     border: none;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
 }
 
 .form__fieldset--border {
   @media (min-width: $tablet-width) {
     border: 1px solid $light-grey;
-    margin: 0 70px 71px 70px;
+    margin: 0 auto 0 auto;
     padding: 25px 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
   }
 }
 
@@ -64,15 +82,59 @@
   padding: 0 20px;
   margin-right: 20px;
   margin-bottom: 35px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 30px;
+    padding: 0 40px;
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 70px;
+    padding: 0 40px;
+  }
 }
 
 .form__button-wrapper {
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+    margin-bottom: 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    column-gap: 80px;
+  }
+}
+
+.form__button {
+  padding: 16px 44px;
+}
+
+.form__wrapper {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 70px;
+  }
+
+  @media (min-width: $desktop-width) {
     display: flex;
     justify-content: space-between;
-    margin: 0 136px 0 70px;
+  }
+}
+
+.form__wrapper .form__fieldset {
+  @media (min-width: $desktop-width) {
+    @include col-2-2(80px);
+  }
+}
+
+.form__wrapper .fields-list__item:last-child {
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
   }
 }
 
@@ -84,16 +146,15 @@
   line-height: 18px;
   color: $special-dark-grey;
   text-transform: uppercase;
-  width: calc(100% - 40px);
+  width: 100%;
   height: 150px;
   padding: 9px 12px 9px 14px;
-  margin: 0 20px;
   border: 1px solid $light-grey;
   resize: none;
 
-  @media (min-width: $tablet-width) {
-    width: calc(100% - 140px);
-    margin: 0 70px;
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 30px;
   }
 }
 
@@ -103,11 +164,12 @@
 }
 
 .form__legend-text {
-  margin: 21px 0 0 0;
   line-height: 16px;
   color: $basic-black;
+  text-align: center;
 
-  @media (min-width: $tablet-width) {
-    min-width: 221px;
+  @media (min-width: $desktop-width) {
+    column-gap: 80px;
+    text-align: start;
   }
 }
