--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -10,15 +10,22 @@
 .our-address__address {
   display: flex;
   justify-content: space-between;
-  padding: 28px 0;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 65px;
+    padding-bottom: 20px;
+    min-height: 201px;
+  }
 
   @media (min-width: $desktop-width) {
-    width: 570px;
     min-height: 201px;
     background-color: $basic-white;
   }
 }
 
+.our-address--font {
+  background-color: $basic-grey;
+}
 
 .our-address__invitation {
   font-family: "Oswald", "Arial", sans-serif;
@@ -32,6 +39,11 @@
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
+    line-height: 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
     line-height: 21px;
   }
 }
@@ -40,6 +52,7 @@
   font-style: normal;
   font-size: 14px;
   line-height: 20px;
+  text-align: end;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
