--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -24,10 +24,15 @@
   left: -40px;
   border: 1px solid $special-light-grey;
   border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    top: 1px;
+    left: -40px;
+  }
 }
 
 .radio {
-  margin-bottom: 20px;
+  margin-bottom: 29px;
 }
 
 .radio--end {
