--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -32,6 +32,10 @@ body {
   }
 }
 
+.reset-padding {
+  padding: 0;
+}
+
 .container {
   max-width: 320px;
   padding: 0 20px;
@@ -40,6 +44,19 @@ body {
   @media (min-width: $tablet-width) {
     max-width: $tablet-width;
     padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: $desktop-width;
+    padding: 0 30px;
+  }
+}
+
+.container--form {
+  @media (min-width: $tablet-width) {
+    max-width: $tablet-width;
+    padding: 0 70px;
+    margin: 0 auto;
   }
 
   @media (min-width: $desktop-width) {
