--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,3 +1,12 @@
+.page-main {
+  padding-top: 20px;
+  border-top: 1px solid $special-light-grey;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+  }
+}
+
 .page-main__title {
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
