--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -2,7 +2,17 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-bottom: 24px;
-  width: 280px;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+
+    @include col-2-2(60px);
+  }
+}
+
+.product__image {
+  width: 168px;
+  height: 200px;
 }
 
 .product__image-link {
