--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -1,6 +1,7 @@
 .page-main {
   padding-top: 20px;
   border-top: 1px solid $special-light-grey;
+  overflow: hidden;
 
   @media (min-width: $tablet-width) {
     border: none;
