--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -1,10 +1,17 @@
+.our-address__desktop {
+  position: relative;
+}
+
 .our-address__address-wrapper {
   @media (min-width: $desktop-width) {
-    width: 1440px;
-    min-height: 201px;
-    margin: 0 auto;
-    padding: 0 110px;
+    position: absolute;
+    top: 90px;
+    min-width: 570px;
   }
+}
+
+.our-address--font {
+  background-color: $basic-grey;
 }
 
 .our-address__address {
@@ -19,12 +26,9 @@
 
   @media (min-width: $desktop-width) {
     min-height: 201px;
+    justify-content: center;
     background-color: $basic-white;
   }
-}
-
-.our-address--font {
-  background-color: $basic-grey;
 }
 
 .our-address__invitation {
@@ -43,8 +47,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    font-size: 20px;
-    line-height: 21px;
+    margin-right: 60px;
   }
 }
 
@@ -57,6 +60,18 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: start;
+  }
+}
+
+.our-address__contact p {
+  margin: 0;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 19px;
   }
 }
 
