--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -5,7 +5,7 @@
 
   @media (min-width: $desktop-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 245px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 80px;
   }
 }
