--- a/source/sass/blocks/functional-food.scss
+++ b/source/sass/blocks/functional-food.scss
@@ -46,7 +46,7 @@
 }
 
 .functional-food__slogan {
-  margin: 0 auto 28px auto;
+  margin: 0 auto 27px auto;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -86,12 +86,12 @@
 }
 
 .functional-food__link {
-  padding: 11px 44px;
+  padding: 11px 73px;
   font-size: 14px;
   line-height: 18px;
 
-
   @media (min-width: $tablet-width) {
+    display: inline-block;
     position: relative;
     padding: 17px 26px 17px 27px;
     font-size: 20px;
