--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,6 @@
 .page-header {
+  margin-bottom: 22px;
+
   @media (min-width: $tablet-width) {
     padding-top: 24px;
   }
@@ -59,7 +61,10 @@
 }
 
 .page-header__logo-wrapper {
+  border-bottom: 1px solid $special-light-grey;
+
   @media (min-width: $tablet-width) {
+    border: none;
     padding: 0;
     margin: 0;
   }
