--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -16,7 +16,7 @@
 
 .our-address__address {
   display: flex;
-  justify-content: space-between;
+  padding: 23px 0 26px 0;
 
   @media (min-width: $tablet-width) {
     padding-top: 65px;
@@ -39,7 +39,7 @@
   line-height: 18px;
   color: $special-black;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 19px 0 0;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -55,7 +55,8 @@
   font-style: normal;
   font-size: 14px;
   line-height: 20px;
-  text-align: end;
+  text-align: start;
+  margin-top: 5px;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -109,4 +110,8 @@
   @media (min-width: $tablet-width) {
     height: 400px;
   }
+}
+
+.our-address__invitation-text {
+  line-height: 28px;
 }
