--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,5 +1,5 @@
 .social {
-  padding: 20px 77px 21px 73px;
+  padding: 22px 77px 14px 73px;
   border-top: 1px solid $dark-grey;
   border-bottom: 1px solid $dark-grey;
   margin-bottom: 22px;
@@ -12,5 +12,22 @@
 
 .social__list {
   list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
+  justify-content: space-between;
+}
+
+.copyright__link {
+  display: flex;
+  justify-content: space-between;
+}
+
+.copyright__text {
+  font-family: "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 18px;
+  margin: 8px 0 0 0;
 }
