--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -86,12 +86,28 @@
   margin: 0;
   width: 134px;
   background: url("../../img/decorative/arrow.svg") 93px 2px no-repeat;
+
+  &:hover {
+    background-position: 101px 2px;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .effect__link-weight-gain {
   margin: 0;
   width: 134px;
   background: url("../../img/decorative/arrow.svg") 91px 2px no-repeat;
+
+  &:hover {
+    background-position: 99px 2px;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .effect__item--weight-loss {
