--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -39,7 +39,8 @@
   line-height: 18px;
   color: $special-black;
   text-transform: uppercase;
-  margin: 0 19px 0 0;
+  margin: 0;
+  min-width: 140px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
