--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,7 +1,9 @@
 $basic-white: #ffffff;
+$special-basic-white: rgba(255, 255, 255, 0.3);
 $basic-black: #000000;
 $special-black: #111111;
 $basic-green:rgba(104, 183, 56, 0.85);
+$basic-green2: #5eaa2f;
 $special-green:rgba(104, 183, 56, 1);
 $basic-grey: #f2f2f2;
 $light-grey: #e7e7e7;
